# air-keys

./: .gitignore  README.md  index.html  package-lock.json  package.json  recording.html  vite.config.ts
.github/workflows/: release.yml
docs/: versioning.md
docs/adr/: 001-gemini-prompt-design.md
scripts/: sync-version.mjs
src/: App.css  App.tsx  index.css  recording.css  recording.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: recorder.rs
src-tauri/src/core/: audio_processor.rs  mod.rs  orchestrator.rs
src-tauri/src/hotkey/: mod.rs  win32_alt_hook.rs
src-tauri/src/injection/: clipboard_injector.rs  mod.rs
src-tauri/src/processors/: deepgram.rs  gemini.rs  mod.rs
src-tauri/src/settings/: commands.rs  mod.rs  stronghold_store.rs  validation.rs
src/components/: RecordingIndicator.tsx
src/settings/: SettingsPage.tsx
